applications/infrastructure/apps/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: default
spec:
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 80
    targetPort: 11434
  type: ClusterIP
